--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -2,83 +2,83 @@ extends ../layout
 
 block content
 
-  div(class='' style='border-color:#ffffff;border-width:0px;')
-    div(class='container-fluid')
-      div(class='row')
-        div(class='col-12')
-          div(id='user-navbar-lg' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
-            div
-              div(id='user-lg' style='position:absolute; top:0px; right:10px; text-align:right;')
-                if current_user
-                  label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label})
-                else
-                  label(style='font-size:small;') 
-                    a(href=root + 'signup') Sign up 
-                    | or 
-                    a(href=root + 'signin') Sign in 
-                    | to access DataSeer
-              div(id='navbar-lg')
-                ul(style='padding-left: 15px;')
-                  li
-                    img(src='../img/DataSeer-logo-min.png' width='25')
-                  
-                  if current_user
-                    li
-                      a(href=root + 'myDocuments' class='nav') My documents
+  div(id='user-navbar-lg' class='col-12' style='min-height:45px; background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
+    div
+      div(id='user-lg' style='position:absolute; top:4px; right:10px; text-align:right;')
+        if current_user
+          label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label})
+        else
+          label(style='font-size:small;') 
+            a(href=root + 'signup') Sign up 
+            | or 
+            a(href=root + 'signin') Sign in 
+            | to access DataSeer
+      div(id='navbar-lg')
+        ul(style='padding-left: 15px;')
+          li
+            img(src='../img/DataSeer-logo-min.png' width='25')
+          
+          if current_user
+            li
+              a(href=root + 'myDocuments' class='nav') My documents
 
-                    if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
-                      li
-                        a(href=root + 'documents' class='nav') All documents
-                    li
-                      a(href=root + 'backoffice/upload' class='nav') Upload
-                    if current_user.role.label === 'curator'
-                      li
-                        a(href=root + 'backoffice/accounts' class='nav') Accounts
-                    li
-                      a(href=root + 'settings' class='nav') Settings
-                    li
-                      a(href=root + 'signout' class='nav') Sign out
-                  else
-                    li
-                      a(href=root + 'signup' class='nav') Sign up
-                    li
-                      a(href=root + 'signin' class='nav') Sign in
-                    li
-                      a(href=root + 'forgotPassword' class='nav') Forgot password
-      div(class='row')
-        div(class='col-12')
-          div(id='datasets-list' class='form')
-      div(class='row')
-        div(class='col-8')
-          div(class='head-col' style='height: 65px;')
-            div(id='view-selection' class='btn-group btn-group-toggle' data-toggle='buttons' style='padding:0;')
-              if document.pdf
-                label(class='btn btn-secondary btn-sm') full text
-                  input(type='radio' name='options' id='tei_all_visible' value='allVisible' autocomplete='off')
-              else
-                label(class='btn btn-secondary btn-sm active') full text
-                  input(type='radio' name='options' id='tei_all_visible' value='allVisible' autocomplete='off' checked)
-              label(class='btn btn-secondary btn-sm') section
-                input(type='radio' name='options' id='tei_only_dataseer' value='onlyDataseer' autocomplete='off')
-              label(class='btn btn-secondary btn-sm') paragraph
-                input(type='radio' name='options' id='tei_only_datasets' value='onlyDatasets' autocomplete='off')
-              if document.pdf
-                label(class='btn btn-secondary btn-sm active') PDF
-                  input(type='radio' name='options' id='pdf_all_visible' value='pdf' autocomplete='off' checked)
-        div(class='col-4')
-          div(class='head-col' style='display: flex; align-items: center; justify-content: center; height: 65px;')
-            if current_user
-                if document
-                  if document.status !== 'metadata'
-                    button#previous_step.btn.btn-primary Metadata
-            button(id='datasets_validation' class='btn btn-primary') Finish
-      div(class='row')
-        div(class='col-8')
-          div(class='foot-col' style='height: 700px; overflow: auto')
-            div(id='document-view' class='')
-        div(class='col-4')
-          div(class='foot-col' style='height: 700px; overflow: auto')
-            div(id='dataset-form' class='form')
+            if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
+              li
+                a(href=root + 'documents' class='nav') All documents
+            li
+              a(href=root + 'backoffice/upload' class='nav') Upload
+            if current_user.role.label === 'curator'
+              li
+                a(href=root + 'backoffice/accounts' class='nav') Accounts
+            li
+              a(href=root + 'settings' class='nav') Settings
+            li
+              a(href=root + 'signout' class='nav') Sign out
+          else
+            li
+              a(href=root + 'signup' class='nav') Sign up
+            li
+              a(href=root + 'signin' class='nav') Sign in
+            li
+              a(href=root + 'forgotPassword' class='nav') Forgot password
+
+  div(class='row' style='height:10%;overflow:hidden;margin-bottom:5px;min-height:60px; ')
+    div(class='col-12')
+      div(id='datasets-list' class='' style='')
+    
+  div(class='row' style='height:70%;flex:1 0 auto;')
+    div(class='col-8' style='height:100%;padding-right:0px;')
+      div(class='' style='height:100%;')
+        
+        div(id='view-selection' class='btn-group btn-group-toggle' data-toggle='buttons' style='height:4%;overflow:hidden;padding:0;margin:0;min-height:20px;')
+          if document.pdf
+            label(class='btn btn-secondary btn-sm') full text
+              input(type='radio' name='options' id='tei_all_visible' value='allVisible' autocomplete='off')
+          else
+            label(class='btn btn-secondary btn-sm active') full text
+              input(type='radio' name='options' id='tei_all_visible' value='allVisible' autocomplete='off' checked)
+          label(class='btn btn-secondary btn-sm') section
+            input(type='radio' name='options' id='tei_only_dataseer' value='onlyDataseer' autocomplete='off')
+          label(class='btn btn-secondary btn-sm') paragraph
+            input(type='radio' name='options' id='tei_only_datasets' value='onlyDatasets' autocomplete='off')
+          if document.pdf
+            label(class='btn btn-secondary btn-sm active') PDF
+              input(type='radio' name='options' id='pdf_all_visible' value='pdf' autocomplete='off' checked)
+
+        div(class='foot-col' style='height:95%; overflow: auto;flex:1 0 auto;')
+          div(id='document-view' class='' style='padding:0;')
+
+    div(class='col-4' style='height:100%; padding-left:5px;')
+      div(class='foot-col' style='height:93%; overflow: auto')
+        div(id='dataset-form' class='form')
+      div(class='' style='display: flex; align-items: center; justify-content: center; height:7%; width:100%')
+        if current_user
+            if document
+              if document.status !== 'metadata'
+                button(id='previous_step' class='btn btn-primary' style='height:80%;line-height: 0;') Metadata
+        button(id='datasets_validation' class='btn btn-primary' style='height:80%;line-height: 0;') Finish
+
+            
 
   include ../modals/quit.pug
   include ../modals/documents/datasets.pug
