cleaning a bit the dataset selection for demo

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -408,6 +408,10 @@ body > div > div > div.row > div:nth-child(1) {
   text-align: center;
 }
 
+#datasets-list > div > ul {
+  padding-left: 0px
+}
+
 #datasets-list .form-row > * {
   display: inline-block;
 }
