--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -42,17 +42,16 @@ block content
             li
               a(href=root + 'forgotPassword' class='nav') Forgot password
 
-  div(class='row' style='height:10%;margin-bottom:5px;min-height:60px;')
-    div(class='col-12' style='height:100%;')
-      div(class='' style='border:1px solid #184D7E;height:100%;width:100%;overflow:hidden;width:100%;background-color:#FFF;')
-        div(id='datasets-list' style='width:92%;border:0px;')
-        button(id='newDataset' class='btn btn-primary' style='width:8%;float:right; height:80%;padding:0;margin:0;position:absolute; right:25px; top:10%;white-space:normal;') Add new Dataset
+  div(class='row' style='margin-bottom:5px;')
+    div(class='col-12')
+      div(class='' style='border:1px solid #184D7E;background-color:#FFF;')
+        div(id='datasets-list' style='border:0px;')
     
   div(class='row' style='height:70%;flex:1 0 auto;')
     div(class='col-8' style='height:100%;padding-right:0px;')
       div(class='' style='height:100%;')
         
-        div(id='view-selection' class='btn-group btn-group-toggle' data-toggle='buttons' style='height:4%;overflow:hidden;padding:0;margin:0;min-height:20px;')
+        div(id='view-selection' class='btn-group btn-group-toggle' data-toggle='buttons' style='height:4%;overflow:hidden;padding:0;margin:0;height:20px;')
           if document.pdf
             label(class='btn btn-secondary btn-sm') full text
               input(type='radio' name='options' id='tei_all_visible' value='allVisible' autocomplete='off')
