--- a/views/layout.pug
+++ b/views/layout.pug
@@ -84,6 +84,7 @@ html
   script(src=root + 'javascripts/lib/jquery.js')
   if document
     div(id='document.id' class='data' value=(document._id))
+    script(src='https://d3js.org/d3-polygon.v2.min.js')
     script(src=root + 'javascripts/lib/randomColor.min.js')
     script(src=root + 'javascripts/lib/htmlBuilder.js')
     script(src=root + 'javascripts/lib/view.js')
