--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -66,7 +66,13 @@ block content
                     div(class='form-row')
                       if current_user.role.label === 'curator'
                         div(class='col-1')
-                          a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
+                          div(class="hidden") #{document.metadata.manuscriptId} #{document.doi} #{document.pmid}
+                          if (typeof document.metadata.manuscriptId !== "undefined" && document.metadata.manuscriptId !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscriptId}
+                          else if (typeof document.pdf !== "undefined" && typeof document.pdf.filename !== "undefined" && document.pdf.filename !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                          else
+                            a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
                           input.form-control(type='text' name='id' class='hidden' value=document._id)
                         div(class='col-1') #{formatDate(document.uploaded_at)}
                         if document.status === 'metadata'
