fix & updates : - improve area detection (regroup nearest lines) - improve build of sentences borders

--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -84,5 +84,11 @@ block content
   include ../modals/documents/datasets.pug
   include ../modals/help.pug
 
+  <div id="pdf-loading-loop">
+    <div class="loader-container">
+      <div class="loader"></div> 
+    </div>
+  </div>
+
   if demo
     include ../forms/demo/datasets.pug
