--- a/views/modals/documents/datasets.pug
+++ b/views/modals/documents/datasets.pug
@@ -1,5 +1,5 @@
 // Button
-button(id='datasets-error-modal-btn' type='button' data-toggle='modal' data-target='#datasets-error-modal' class='hidden')
+button(id='datasets-error-modal-btn' type='button' data-toggle='modal' data-target='#datasets-error-modal' class='hidden modal fade')
 // Modal
 div(class='modal fade' id='datasets-error-modal' tabindex='-1' role='dialog' aria-labelledby='datasets-error-modal-label' aria-hidden='true')
   div(class='modal-dialog modal-lg modal-dialog-centered datasets-error-modal-lg' role='document')
@@ -11,7 +11,7 @@ div(class='modal fade' id='datasets-error-modal' tabindex='-1' role='dialog' ari
       div(class='modal-body' id='datasets-error-modal-body') #Body
 
 // Button
-button(id='datasets-confirm-modal-btn' type='button' data-toggle='modal' data-target='#datasets-confirm-modal' class='hidden')
+button(id='datasets-confirm-modal-btn' type='button' data-toggle='modal' data-target='#datasets-confirm-modal' class='hidden modal fade')
 // Modal
 div(class='modal fade' id='datasets-confirm-modal' tabindex='-1' role='dialog' aria-labelledby='datasets-confirm-modal-label' aria-hidden='true')
   div(class='modal-dialog modal-dialog-centered datasets-confirm-modal-lg' role='document')
