--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -15,6 +15,35 @@ body {
   background-color: lightgray;
 }
 
+#pdf-loading-loop {
+  z-index: 100000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.75;
+  background-color: white;
+}
+
+#pdf-loading-loop .loader-container {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+}
+
+#pdf-loading-loop .loader-container .loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .footer {
   flex-shrink: 0;
 }
@@ -35,21 +64,74 @@ body {
   margin-bottom: 10px; 
 }
 
-#document-view #pdf-viewer .contourAnnotationsLayer {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  line-height: 1;
-  overflow: hidden;
+#document-view #pdf-viewer .textLayer {
+  z-index: 1000;
 }
 
-#document-view #pdf-viewer .contourAnnotationsLayer .activeContour,
-#document-view #pdf-viewer .contourAnnotationsLayer .selected,
-#document-view #pdf-viewer .contourAnnotationsLayer .coloredContour,
-#document-view #pdf-viewer .contourAnnotationsLayer .corresp {
-  border-width: 3px !important;
+#document-view #pdf-viewer .contourLayer {
+  background-color: transparent;
+  z-index: 3000;
+}
+
+#document-view #pdf-viewer .annotationsLayer {
+  background-color: transparent;
+  z-index: 2000;
+}
+
+#document-view #pdf-viewer .contourLayer .contour {
+  background-color: transparent;
+  z-index: 3100;
+  cursor: pointer;
+}
+
+#document-view #pdf-viewer .contourLayer .contour div {
+  background-color: transparent; 
+}
+
+#document-view #pdf-viewer .contourLayer .contour div[events="true"] {
+  z-index: 3120;
+  background-color: transparent; 
+}
+
+#document-view #pdf-viewer .contourLayer .contour canvas {
+  z-index: 3110;
+}
+
+#document-view #pdf-viewer .contourLayer .contour[datasetid] canvas {
+  z-index: 3115;
+}
+
+#document-view #pdf-viewer .contourLayer .contour.activeContourDataset,
+#document-view #pdf-viewer .contourLayer .contour.activeContourSentence,
+#document-view #pdf-viewer .contourLayer .contour.selected {
+  z-index: 3200;
+}
+
+#document-view #pdf-viewer .contourLayer .contour.activeContourDataset canvas,
+#document-view #pdf-viewer .contourLayer .contour.activeContourSentence canvas,
+#document-view #pdf-viewer .contourLayer .contour.selected canvas {
+  z-index: 3210;
+}
+
+#document-view #pdf-viewer .contourLayer .contour.activeContourDataset div[events="true"] ,
+#document-view #pdf-viewer .contourLayer .contour.activeContourSentence div[events="true"] ,
+#document-view #pdf-viewer .contourLayer .contour.selected div[events="true"]  {
+  z-index: 3220;
+}
+
+#document-view #pdf-viewer .annotationsLayer s {
+  z-index: 2100;
+  cursor: pointer;
+}
+
+#document-view #pdf-viewer .contourLayer {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    line-height: 1;
+    overflow: hidden;
 }
 
 #document-view #pdf-viewer .annotationsLayer {
@@ -62,27 +144,12 @@ body {
   overflow: hidden;
 }
 
-#document-view #pdf-viewer .contourAnnotationsLayer .contour div {
-  cursor: pointer;
-  z-index: 1100;
-}
-
-#document-view #pdf-viewer .annotationsLayer s {
-  cursor: pointer;
-  z-index: 1200;
-}
-
 #document-view #pdf-viewer .annotationsLayer .hover {
   cursor: pointer;
 }
 
 #document-view #pdf-viewer .annotationsLayer .selected {
   cursor: pointer;
-}
-
-#document-view #pdf-viewer .annotationsLayer [datasetId] {
-  cursor: pointer;
-  background-color: rgba(255, 255, 224, 0.3);
 }
 
 #document-view #pdf-viewer .annotationsLayer s[corresp],
@@ -383,11 +450,6 @@ body > div > div > div.row > div:nth-child(1) {
   cursor: pointer;
 }
 
-#document-view [datasetId] {
-  cursor: pointer;
-  background-color: rgba(255,255,224, 0.3);
-}
-
 #document-view s[corresp],
 #document-view s[id] {
   cursor: pointer;
@@ -445,6 +507,7 @@ body > div > div > div.row > div:nth-child(1) {
 #datasets-list #datasetsListItemsContainer {
   display: inline-block;
   height: 115px;
+  min-width: 100%;
 }
 
 #datasets-list #datasetsListItems {
