--- a/public/stylesheets/process/metadata.css
+++ b/public/stylesheets/process/metadata.css
@@ -7,3 +7,14 @@
   margin-top: 20px !important;
   margin-bottom: 20px !important;
 }
+
+#reload_metada {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.authors-container {
+  font-weight: normal;
+  height: 250px;
+  overflow-y: auto;
+}
