fix issue https://github.com/DataSeer/dataseer-web/issues/142

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -119,6 +119,16 @@ body {
   z-index: 3220;
 }
 
+#document-view #pdf-viewer .contourLayer .contour.hover canvas,
+#document-view #pdf-viewer .contourLayer .contour.hover canvas {
+  z-index: 3215;
+}
+
+#document-view #pdf-viewer .contourLayer .contour.hover div[events="true"] ,
+#document-view #pdf-viewer .contourLayer .contour.hover div[events="true"]   {
+  z-index: 3225;
+}
+
 #document-view #pdf-viewer .annotationsLayer s {
   z-index: 2100;
   cursor: pointer;
