--- a/public/stylesheets/process/finish.css
+++ b/public/stylesheets/process/finish.css
@@ -2,3 +2,10 @@
   margin-top: 20px !important;
   margin-bottom: 20px !important;
 }
+
+.authors-container {
+  font-weight: normal;
+  height: 250px;
+  overflow-y: auto;
+  margin-bottom: 15px;
+}
